# youtility

./: .env.example  .gitignore  COMMIT.md  ISSUE.md  PROJECT_SUMMARY.md  README.md  manage.py  pyproject.toml
Frontend/: requires.md
Youtility/: .env.example  asgi.py  models.py  settings.py  urls.py  wsgi.py
comments/: models.py  serializers.py  services.py  urls.py  views.py
config/: settings.py  urls.py
core/: exceptions.py
core/services/: __init__.py  translation_service.py  youtube_api_service.py
todos/: models.py  serializers.py  views.py
utils/todos/: apps.py  serializers.py  views.py
videos/: models.py  serializers.py  views.py
web/crawling/: apps.py  models.py
web/crawling/service/: hn_service.py
youtube/comments/: apps.py  views.py
youtube/comments/migrations/: 0001_initial.py
youtube/videos/: apps.py  models.py  serializers.py  views.py
